--- a/nosotros.html
+++ b/nosotros.html
@@ -26,7 +26,46 @@
 
     <main class="contenedor">
         <h1>Nosotros</h1>
+
+        <div class="nosotros">
+            <div class="nosotros__contenido">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ut bibendum dui. Aliquam pretium turpis et luctus convallis. Duis vulputate ipsum sit amet risus eleifend, ac placerat metus dapibus. Vivamus consectetur ipsum sed vestibulum feugiat. Mauris id tempus orci. Donec non quam ante. Ut sagittis tortor ut tincidunt pharetra. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam blandit bibendum purus. Mauris fringilla, neque eget fermentum porta, felis leo eleifend metus, quis tristique dolor ligula eu dolor. Fusce fringilla blandit laoreet. 
+                </p>
+                <p>
+                    Donec nibh tortor, vestibulum sed semper vitae, egestas sit amet est. Nunc vulputate magna sodales elit porta dapibus.
+                </p>
+            </div>
+            <img class="nosotros__imagen" src="img/nosotros.jpg" alt="Imagen de nosotros">
+        </div>
     </main>
+
+    <section class="contenedor comprar">
+        <h2 class="comprar__titulo">¿Por qué comprar con nosotros?</h2>
+
+        <div class="bloques">
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_1.png" alt="Imagen de un ícono">
+                <h2 class="bloque__titulo">El Mejor Precio</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed id magna felis. Suspendisse facilisis placerat nunc, a varius ipsum lobortis.</p>
+            </div>
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_2.png" alt="Imagen de un ícono">
+                <h2 class="bloque__titulo">Para devs</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed id magna felis. Suspendisse facilisis placerat nunc, a varius ipsum lobortis.</p>
+            </div>
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_3.png" alt="Imagen de un ícono">
+                <h2 class="bloque__titulo">Envío gratis</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed id magna felis. Suspendisse facilisis placerat nunc, a varius ipsum lobortis.</p>
+            </div>
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_4.png" alt="Imagen de un ícono">
+                <h2 class="bloque__titulo">La Mejor Calidad</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed id magna felis. Suspendisse facilisis placerat nunc, a varius ipsum lobortis.</p>
+            </div>
+        </div>
+    </section>
 
     <footer class="footer">
         <p class="footer__texto">Front End Store - Todos los derechos reservados 2024.</p>
